--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.441.0",
     "next": "^15.0.3",
-    "react": "^19.0.0-rc",
+    "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
-    "react-dom": "^19.0.0-rc",
+    "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "stream-chat": "^8.25.1",
     "stream-chat-react": "^11.13.0",
@@ -69,5 +69,9 @@
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
+  },
+  "overrides": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
